Add .NET API (#7)
